fix skewed section on large displays overlapping content

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -121,6 +121,7 @@ $breakpoints: (
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
+  jano: 1920px
 );
 $print-breakpoint: large;
 $breakpoint-classes: (small medium large);
